--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,8 @@ android {
 }
 
 dependencies {
-
+    implementation 'com.journeyapps:zxing-android-embedded:4.2.0'
+    implementation 'com.google.zxing:core:3.4.1'
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation platform('com.google.firebase:firebase-bom:31.3.0')
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
