--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,8 @@ android {
 }
 
 dependencies {
+
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'com.journeyapps:zxing-android-embedded:4.2.0'
     implementation 'com.google.zxing:core:3.4.1'
     implementation 'com.google.firebase:firebase-analytics-ktx'
